<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/gradient"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/wave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/wave"
        android:layout_marginVertical="248dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@drawable/round"
        android:layout_marginTop="8dp"
        android:textColor="@color/white"
        android:id="@+id/round"
        android:layout_marginVertical="340dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@drawable/rounded_square"
        android:layout_marginTop="15dp"
        android:text="@string/good"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:id="@+id/o_condition"
        android:layout_marginVertical="40dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/score"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="660dp"
        android:background="@drawable/button"
        android:textColor="@color/white"
        android:text="@string/t_street"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@drawable/rounded_square_back"
        android:layout_marginTop="15dp"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:id="@+id/rounded_back"
        android:layout_marginVertical="95dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/score"/>


    <TextView
        android:id="@+id/waveheight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wave_height"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_marginVertical="105dp"
        android:layout_marginHorizontal="45dp"
        app:layout_constraintTop_toBottomOf="@id/o_condition"
        app:layout_constraintLeft_toLeftOf="@id/rounded_back"
        tools:ignore="MissingConstraints">
    </TextView>

    <TextView
        android:id="@+id/wave_period"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:gravity="center"
        android:text="@string/wave_period"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_marginVertical="220dp"
        android:layout_marginHorizontal="45dp"
        app:layout_constraintTop_toBottomOf="@id/o_condition"
        app:layout_constraintLeft_toLeftOf="@id/rounded_back"
        tools:ignore="MissingConstraints">
    </TextView>

    <TextView
        android:id="@+id/temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:gravity="center"
        android:text="Temperature"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_marginVertical="220dp"
        android:layout_marginHorizontal="195dp"
        app:layout_constraintTop_toBottomOf="@id/o_condition"
        app:layout_constraintLeft_toLeftOf="@id/rounded_back"
        tools:ignore="MissingConstraints">
    </TextView>


    <TextView
        android:id="@+id/waveheight_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/_1_2ft"
        android:gravity="center_horizontal|center_vertical"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:background="@drawable/rounded_square_green"
        android:layout_marginHorizontal="50dp"
        android:layout_marginVertical="170dp"
        app:layout_constraintBottom_toBottomOf="@id/rounded_back"
        app:layout_constraintLeft_toLeftOf="@id/rounded_back"
        tools:ignore="MissingConstraints">
    </TextView>

    <TextView
        android:id="@+id/temp_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="70"
        android:gravity="center_horizontal|center_vertical"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:background="@drawable/rounded_square_green"
        android:layout_marginHorizontal="200dp"
        android:layout_marginVertical="60dp"
        app:layout_constraintBottom_toBottomOf="@id/rounded_back"
        app:layout_constraintLeft_toLeftOf="@id/rounded_back"
        tools:ignore="MissingConstraints">
    </TextView>

    <TextView
        android:id="@+id/wave_period_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="70"
        android:gravity="center_horizontal|center_vertical"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:background="@drawable/rounded_square_green"
        android:layout_marginHorizontal="50dp"
        android:layout_marginVertical="60dp"
        app:layout_constraintBottom_toBottomOf="@id/rounded_back"
        app:layout_constraintLeft_toLeftOf="@id/rounded_back"
        tools:ignore="MissingConstraints">
    </TextView>

    <TextView
        android:id="@+id/UV_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="28dp"
        android:layout_marginBottom="60dp"
        android:background="@drawable/rounded_square_green"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/_10"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:layout_marginHorizontal="200dp"
        android:layout_marginVertical="170dp"
        app:layout_constraintBottom_toBottomOf="@id/rounded_back"
        app:layout_constraintLeft_toLeftOf="@id/rounded_back"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/UV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/uv_level"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_marginVertical="105dp"
        android:layout_marginHorizontal="210dp"
        app:layout_constraintTop_toBottomOf="@id/o_condition"
        app:layout_constraintLeft_toLeftOf="@id/rounded_back"
        tools:ignore="MissingConstraints">
    </TextView>

    <TextView
        android:id="@+id/beachreport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:text="Wave Watch"
        android:textColor="@color/white"
        android:textSize="45sp"
        android:layout_marginVertical="145dp"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="8.0"
        android:textColor="@color/white"
        android:textSize="60sp"
        android:layout_marginVertical="360dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>